# packages/api-contracts/generated/platform.openapi.json
@@ -811,6 +811,56 @@
         ],
         "additionalProperties": false
       },
+      "OrganizationIdV1": {
+        "type": "string",
+        "minLength": 1
+      },
+      "OrganizationWorkspaceRefV1": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "minLength": 1
+          },
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "name"
+        ],
+        "additionalProperties": false
+      },
+      "ListOrganizationWorkspacesResponseV1": {
+        "type": "object",
+        "properties": {
+          "workspaces": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "minLength": 1
+                },
+                "name": {
+                  "type": "string"
+                }
+              },
+              "required": [
+                "id",
+                "name"
+              ],
+              "additionalProperties": false
+            }
+          }
+        },
+        "required": [
+          "workspaces"
+        ],
+        "additionalProperties": false
+      },
       "PageRequest": {
         "type": "object",
         "properties": {
